# jeugddag

./: .gitignore  AUTHORS  README.md  autogen.sh  configure.ac
src/: CSVFile.cpp  CSVFile.h  InschrijvingsLijst.cpp  InschrijvingsLijst.h  Makefile.am  WorkshopCollection.h  WorkshopSessie.cpp  jeugddag-cli.cpp  jeugddag.h  nietbetaald.cpp  stringhelper.h
src/csvfile/: CSVFile.cpp  Makefile.am
src/jeugddag-gui/: Makefile.am  jeugddaggui.glade  sort_main.cpp
src/libdatasource/: datasource.h
src/libjeugddag/: Inschrijving.cpp  Inschrijving.h  InschrijvingsLijst.cpp  InschrijvingsLijst.h  Kind.cpp  Kind.h  Makefile.am  Workshop.cpp  Workshop.h  WorkshopCollection.cpp  WorkshopCollection.h  WorkshopSessie.cpp  jeugddag.cpp  jeugddag.h
src/logger/: Makefile.am  logger.cpp  logger.h
web/: subscribe.php  subscribe_nacht.php
